--- a/frontend/src/pages/DiscoverProsPage/DiscoverProsPage.module.css
+++ b/frontend/src/pages/DiscoverProsPage/DiscoverProsPage.module.css
@@ -12,10 +12,11 @@
   color: #fff !important;
   margin-bottom: 12px !important;
   font-weight: 800 !important;
+  font-size: 3rem !important;
 }
 .heroSubtitle {
   color: #cdd5ea !important;
-  font-size: 18px !important;
+  font-size: 1.5rem !important;
   margin-bottom: 20px !important;
 }
 
