--- a/frontend/src/pages/user/Notifications/NotificationsPage.module.css
+++ b/frontend/src/pages/user/Notifications/NotificationsPage.module.css
@@ -130,6 +130,26 @@
   font-size: 15px;
 }
 
+/* Loading and Pagination */
+.loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px;
+  padding: 40px;
+}
+
+.paginationContainer {
+  margin-top: 24px;
+  display: flex;
+  justify-content: center;
+  padding: 16px 0;
+}
+
+.unreadBadge {
+  margin-left: 8px;
+}
+
 /* Tabs customization */
 :global(.ant-tabs-tab) {
   font-weight: 500;
